--- a/AmiAmi/RelationProductViewController.xib
+++ b/AmiAmi/RelationProductViewController.xib
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="grouped" separatorStyle="none" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="hXv-mN-IZ3">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="grouped" separatorStyle="none" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="hXv-mN-IZ3">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
@@ -27,6 +27,12 @@
                 </tableView>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="hXv-mN-IZ3" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="EwO-3z-4Bv"/>
+                <constraint firstAttribute="bottom" secondItem="hXv-mN-IZ3" secondAttribute="bottom" id="ImZ-4C-ISw"/>
+                <constraint firstAttribute="trailing" secondItem="hXv-mN-IZ3" secondAttribute="trailing" id="Vua-7L-C7r"/>
+                <constraint firstItem="hXv-mN-IZ3" firstAttribute="top" secondItem="1" secondAttribute="top" id="vd0-jc-HPF"/>
+            </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
     </objects>
