rename some class

--- a/AmiAmi/MainViewController.xib
+++ b/AmiAmi/MainViewController.xib
@@ -4,7 +4,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RankViewController">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainViewController">
             <connections>
                 <outlet property="dataTableView" destination="0hp-VO-3O4" id="f0u-77-YIO"/>
                 <outlet property="view" destination="1" id="3"/>
