--- a/AmiAmi/ProductViewController.xib
+++ b/AmiAmi/ProductViewController.xib
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="ruz-MC-61a">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="ruz-MC-61a">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -26,6 +26,12 @@
                 </tableView>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="ruz-MC-61a" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="29b-v7-EbJ"/>
+                <constraint firstItem="ruz-MC-61a" firstAttribute="top" secondItem="1" secondAttribute="top" id="75C-EH-yBQ"/>
+                <constraint firstAttribute="bottom" secondItem="ruz-MC-61a" secondAttribute="bottom" id="N1F-jn-L0y"/>
+                <constraint firstAttribute="trailing" secondItem="ruz-MC-61a" secondAttribute="trailing" id="x9A-3Q-oNo"/>
+            </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
     </objects>
