modify tabbarcontroller and relation items

--- a/AmiAmi/Product/ProductViewController.xib
+++ b/AmiAmi/Product/ProductViewController.xib
@@ -16,7 +16,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="ruz-MC-61a">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
@@ -29,9 +29,11 @@
             <constraints>
                 <constraint firstItem="ruz-MC-61a" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="29b-v7-EbJ"/>
                 <constraint firstItem="ruz-MC-61a" firstAttribute="top" secondItem="1" secondAttribute="top" id="75C-EH-yBQ"/>
-                <constraint firstAttribute="bottom" secondItem="ruz-MC-61a" secondAttribute="bottom" id="N1F-jn-L0y"/>
+                <constraint firstAttribute="bottom" secondItem="ruz-MC-61a" secondAttribute="bottom" constant="49" id="N1F-jn-L0y"/>
                 <constraint firstAttribute="trailing" secondItem="ruz-MC-61a" secondAttribute="trailing" id="x9A-3Q-oNo"/>
             </constraints>
+            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+            <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
     </objects>
