--- a/AmiAmi/MainViewController/DefaultProductCell.xib
+++ b/AmiAmi/MainViewController/DefaultProductCell.xib
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RelationCell" rowHeight="360" id="JG4-Mq-Frd" customClass="RelationCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RelationCell" rowHeight="360" id="JG4-Mq-Frd" customClass="DefaultProductCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="160"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JG4-Mq-Frd" id="dnR-qM-8la">
@@ -30,8 +30,8 @@
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
-                <outlet property="thumbnailImageView" destination="Ft9-W4-EAK" id="0T4-gx-kZw"/>
-                <outlet property="titleTextView" destination="u8d-TI-TnO" id="eSe-lv-ZVi"/>
+                <outlet property="thumbnailImageView" destination="Ft9-W4-EAK" id="NSF-7Y-OJC"/>
+                <outlet property="titleTextView" destination="u8d-TI-TnO" id="Oqg-cF-cWy"/>
             </connections>
         </tableViewCell>
     </objects>
