--- a/AmiAmi/MainViewController/RankProductCell.xib
+++ b/AmiAmi/MainViewController/RankProductCell.xib
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RankCell" rowHeight="360" id="dS9-Qm-t5H" customClass="MainCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RankCell" rowHeight="360" id="dS9-Qm-t5H" customClass="RankProductCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dS9-Qm-t5H" id="hNJ-eX-HhN">
@@ -34,9 +34,9 @@
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
-                <outlet property="rankImageView" destination="woH-Jw-8gy" id="F8E-i0-paG"/>
-                <outlet property="thumbnailImageView" destination="yKo-gr-g4Z" id="T1h-VZ-1xd"/>
-                <outlet property="titleTextView" destination="hjz-gC-TmZ" id="5lg-2b-e9w"/>
+                <outlet property="rankImageView" destination="woH-Jw-8gy" id="IjD-f1-ses"/>
+                <outlet property="thumbnailImageView" destination="yKo-gr-g4Z" id="Ltu-BD-JGY"/>
+                <outlet property="titleTextView" destination="hjz-gC-TmZ" id="SDf-eV-Dfd"/>
             </connections>
         </tableViewCell>
     </objects>
